# multilayer_perceptron

./: .gitignore  info.txt  pres.odp  ps.cc
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/code-samples/: main_console.cc
src/common/: error_thread.cc  error_thread.h  functions.cc  metrics.cc  metrics.h  perceptron_settings.cc  perceptron_settings.h  strategy.h  types.h
src/controller/: controller.h
src/experiments/: CMakeLists.txt  ex_1.cc  ex_2.cc  letters_visualization.cc
src/experiments/graph/: CMakeLists.txt  graph.cc
src/experiments/graph/data/: test_1_0_0.txt  test_1_10_0.txt  test_1_11_0.txt  test_1_12_0.txt  test_1_13_0.txt  test_1_14_0.txt  test_1_15_0.txt  test_1_16_0.txt  test_1_17_0.txt  test_1_18_0.txt  test_1_19_0.txt  test_1_1_9.txt  test_1_20_9.txt  test_1_21_0.txt  test_1_22_9.txt  test_1_23_0.txt  test_1_24_9.txt  test_1_25_0.txt  test_1_26_0.txt  test_1_27_0.txt  test_1_28_0.txt  test_1_2_0.txt  test_1_3_9.txt  test_1_4_0.txt  test_1_5_9.txt  test_1_6_0.txt  test_1_7_0.txt  test_1_8_0.txt  test_1_9_0.txt  test_2_0_0.txt  test_2_1_11.txt  test_2_2_0.txt  test_2_3_11.txt  test_2_4_0.txt  test_2_5_11.txt  test_3_0_0.txt  test_3_1_0.txt
src/experiments/graph/image_painter/: CMakeLists.txt  image_painter.cc  image_painter.h
src/experiments/graph/image_painter/painters/: CMakeLists.txt  abstract.cc  abstract.h  background.cc  background.h  colors_set.h  painter.cc  painter.h  parameters.cc  parameters.h
src/experiments/metrics_widget/: metrics_widget.cc  metrics_widget.h  view_constants.h
src/lib/: a.out  blas_matrix.h  cl_matrix.h  graph.h  m_sstr.h  m_thread.cc  m_thread.h  m_time.h  matrix.h  random.h  test.cc
src/model/: data_manager.cc  data_manager.h  graph_model.cc  graph_model.h  matrix_model.cc  matrix_model.h  matrix_model_copy.h  model.cc  model.h
src/qt/: layerView.h  widget.cpp  widget.h  widget.ui
src/tests/: Makefile  file.cc  learn.cc  settings.cc  speed.cc  test.h
